errorlogs/1516472723863-Program3- DeterminePrimes.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
149 INFO: PyInstaller: 3.3.1
149 INFO: Python: 3.4.4
150 INFO: Platform: Windows-XP-5.1.2600-SP3
154 INFO: wrote Z:\p2e\Program3- DeterminePrimes.spec
160 INFO: UPX is not available.
160 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
187 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516472723863', 'Z:\\p2e']
188 INFO: checking Analysis
188 INFO: Building Analysis because out00-Analysis.toc is non existent
188 INFO: Initializing module dependency graph...
197 INFO: Initializing module graph hooks...
202 INFO: Analyzing base_library.zip ...
7886 INFO: Processing pre-find module path hook   distutils
11229 INFO: running Analysis out00-Analysis.toc
11759 INFO: Caching module hooks...
11775 INFO: Analyzing Z:\p2e\workingdir\1516472723863\Program3- DeterminePrimes.py

Syntax error in Z:\p2e\workingdir\1516472723863\Program3- DeterminePrimes.py
  File "Z:\p2e\workingdir\1516472723863\Program3- DeterminePrimes.py", line 33
     print(f"There are {count} prime numbers less than {number_bound}.")
                                                                      ^
 SyntaxError: invalid syntax

